test/official_tests/variable/duplicate_parameter.lox
fun foo(arg,
        arg) { // error: {"line":2,"message":"Variable 'arg' is already declared in this scope","type":"RuntimeError"}
  "body";
}
